--- a/time-line.html
+++ b/time-line.html
@@ -19,7 +19,7 @@
         <!-- HEADER NAVIGATION -->
         <header>
             <a href = "#" class = "logo">Portfólio</a>
-            <div class = "menu""></div>
+            <div class = "menu"></div>
             <ul>
                 <li><a href = "https://vinicius-25.github.io/portfolio-page/">Home</a></li>
                 <li><a href = "about.html">Sobre</a></li>
