--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href = "#" class = "logo">Portfólio</a>
             <div class = "menu"></div>
             <ul>
-                <li><a href = "https://vinicius-25.github.io/portfolio-page/">Home</a></li>
+                <li><a href = "index.html">Home</a></li>
                 <li><a href = "about.html">Sobre</a></li>
                 <li><a href = "time-line.html">Linha do Tempo</a></li>
                 <li><a href = "skills.html">Habilidades</a></li>
